--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "cleanly-server",
   "version": "0.0.1",
   "description": "server side for cleanly app",
-  "main": "index.js",
+  "main": "src/server.js",
+  "scripts": {
+    "start": " node .",
+    "start:dev": "NODE_ENV=development nodemon ."
+  },
   "repository": "git@github.com:cleanlyer/cleanly-server.git",
   "author": "kanekotic <alvarojosepl@gmail.com>",
   "license": "MIT",
