--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "4.16.3",
     "express-exception-handler": "0.1.5",
     "helmet": "3.12.2",
-    "morgan": "1.9.0"
+    "morgan": "1.9.0",
+    "multer": "^1.3.1"
   }
 }
