--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "server side for cleanly app",
   "main": "src/server.js",
   "scripts": {
+    "test": "jest",
+    "test:dev": "jest --watchAll",
+    "test:cov": "jest --coverage",
     "start": " node .",
-    "start:dev": "NODE_ENV=development nodemon ."
+    "start:dev": "NODE_ENV=development node ./node_modules/nodemon/bin/nodemon.js ."
   },
   "repository": "git@github.com:cleanlyer/cleanly-server.git",
   "author": "kanekotic <alvarojosepl@gmail.com>",
@@ -18,6 +21,11 @@
     "express-exception-handler": "0.1.5",
     "helmet": "3.12.2",
     "morgan": "1.9.0",
-    "multer": "^1.3.1"
+    "multer": "1.3.1"
+  },
+  "devDependencies": {
+    "jest": "23.4.2",
+    "nodemon": "1.18.3",
+    "supertest": "3.1.0"
   }
 }
