--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "4.16.3",
     "express-exception-handler": "1.0.3",
     "helmet": "3.12.2",
+    "mongoose": "5.2.7",
     "morgan": "1.9.0",
     "multer": "1.3.1"
   },
