--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - node
 before_script:
-  - openssl des3 -K $SSL_PASSWORD -d -out ./src/config.json -in ./encripted/cf.enc  > /dev/null 2>&1
+  - openssl des3 -d -out ./src/config.json -in ./encrypted/cf.enc -pass "pass:$SSL_PASSWORD" > /dev/null 2>&1
 script:
   - yarn test:cov
