--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
-os: osx
 language: node_js
 node_js:
   - node
 before_script:
-  - openssl des3 -d -out ./src/config.json -in ./encrypted/cf.enc -pass pass:$SSL_PASSWORD
+  - openssl des3 -d -out ./src/config.json -in ./encrypted/cf.enc -k "$SSL_PASSWORD"
 script:
   - yarn test:cov
