--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "1.3.1"
   },
   "devDependencies": {
+    "coveralls": "3.0.2",
     "faker": "4.1.0",
     "jest": "23.4.2",
     "nodemon": "1.18.3",
