--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "aws-sdk": "2.296.0",
     "body-parser": "1.18.3",
     "cors": "2.8.4",
     "express": "4.16.3",
@@ -22,7 +23,9 @@
     "helmet": "3.12.2",
     "mongoose": "5.2.7",
     "morgan": "1.9.0",
-    "multer": "1.3.1"
+    "multer": "1.3.1",
+    "multer-s3": "2.7.0",
+    "uuid": "3.3.2"
   },
   "devDependencies": {
     "coveralls": "3.0.2",
